deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-k8-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: spring-k8-demo

  template:
    metadata:
      labels:
        app: spring-k8-demo

    spec:
      containers:
      - name: spring-k8-demo
        image: spring-k8-demo:v2
        imagePullPolicy: Never

        ports:
        - containerPort: 8080
