redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  labels:
    app: redpanda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: docker.redpanda.com/redpandadata/redpanda:latest
          args:
            - redpanda
            - start
            - --smp=1
            - --memory=512M
            - --overprovisioned
            - --node-id=0
            - --check=false
            - --kafka-addr=PLAINTEXT://0.0.0.0:9092
            - --advertise-kafka-addr=PLAINTEXT://redpanda:9092
            - --mode=dev-container
          ports:
            - containerPort: 9092
          resources:
            limits:
              memory: "768Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
spec:
  selector:
    app: redpanda
  ports:
    - port: 9092
      targetPort: 9092
