service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-k8-demo-service

spec:
  selector:
    app: spring-k8-demo

  ports:
  - port: 80
    targetPort: 8080

  type: NodePort
